2014-??-??, Version 2.0

- New configuration table in db
- New tabs system : using markup language
- New node type : selections. Those are empty nodes where you can add tabs (with markup language)
- No more local access to Collectd. Only using remote features (need jsonrpc plugin)
- Possible use of multiple Collectd sources (need to configure 'cdsrc')
- bin/aggregator.conf uses a configurable path to generate aggregator configuration files
- Upgrade to jquery-ui-1.10.3
- Using JQuery-UI portlets
- Added FreeBSD colors for memory graphs (anonymous user request)
- New icon for left tree root
- Removed vu_cpu_meter and load_meter for folders
- New syntax for direct host/tab access : #host_/source/host(/tab)
- fixed memory definitions for SSC Serv
- 'Processes' tab now has filters

2013-08-29, Version 1.3

- Fixed bug #33 (Broken aggregators / an aggregator for "n")
- new URL syntax : #host_<hostname>/<plugin> (replaces undocumented #host_<hostname>)
- New feature : timeline

2013-04-29, Version 1.2

- New feature : in folder tabs, you can now display folder aggregators. Previously only aggregators (for the selected folder) and hosts/plugins could be shown.
- New feature : views (old menu 'views' was renamed as 'display' and there is a new 'view' menu )
- Updated the database creation scripts (no more automatic initialization)
- Apache proxy is no longer needed. Connection to jsonrpc is now done thanks to curl library
- Bugs fixed

2013-03-25, Version 1.1

- Removed obsolete mysql_* function calls (YM - issue #25)
- Reindent php files (YM)
- Use new topps collectd-pw plugin for top process (CF)
- Folder tabs : limited lifetime (CF - issue #21))
- Code and config cleanup (pexio - #22)
- New bin/get_all_children_path executable (YM)

2012-11-06, Version 1.0

Initial version