@@ -1,3 +1,3 @@
-<ul class="ui-widget ui-widget-content ui-corner-all">
-	<li>Clip</li>
+<ul  id="clip" class="ui-widget ui-widget-content ui-corner-all">
+	<li id="clip_content">Empty clip</li>
 </ul>
